wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: wordpress
  name: wordpress
  namespace: wordpress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31004
  selector:
    app: wordpress
  type: NodePort
