wordpress/netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-network-policy
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
       app: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
          #- ipBlock:
          #cidr: 172.17.0.0/16
          #except:
          #- 172.17.1.0/24
    - podSelector:
        matchLabels:
          app: wordpress
    ports:
    - protocol: TCP
      port: 3306
